--- a/package.json
+++ b/package.json
@@ -42,15 +42,15 @@
   },
   "homepage": "https://github.com/mbrn/material-table#readme",
   "devDependencies": {
-    "@babel/cli": "7.1.2",
-    "@babel/core": "7.4.4",
-    "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
-    "@babel/plugin-transform-runtime": "7.1.0",
-    "@babel/preset-env": "^7.2.0",
-    "@babel/preset-react": "7.0.0",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
     "babel-eslint": "10.0.1",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
     "buble": "0.19.3",
     "eslint": "5.7.0",
@@ -62,24 +62,26 @@
     "eslint-plugin-react": "7.11.1",
     "eslint-plugin-standard": "4.0.0",
     "husky": "^1.2.0",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-hot-loader": "^4.3.12",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.8.5",
     "typescript": "^3.2.2",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.0"
   },
   "dependencies": {
-    "@date-io/date-fns": "^1.1.0",
+    "@date-io/date-fns": "^1.3.5",
     "@material-ui/core": "^3.9.3",
     "classnames": "^2.2.6",
+    "css-loader": "^2.1.1",
     "date-fns": "^2.0.0-alpha.27",
     "debounce": "^1.2.0",
-    "filefy": "0.1.9",
-    "material-ui-pickers": "2.2.4",
-    "prop-types": "^15.6.2",
-    "react-beautiful-dnd": "11.0.2",
-    "react-double-scrollbar": "0.0.15"
+    "filefy": "^0.1.9",
+    "material-ui-pickers": "^2.2.4",
+    "prop-types": "^15.7.2",
+    "react-beautiful-dnd": "^11.0.2",
+    "react-double-scrollbar": "0.0.15",
+    "style-loader": "^0.23.1"
   }
 }
