--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@date-io/core": "^1.3.6",
     "@date-io/date-fns": "^1.1.0",
     "@material-ui/core": "^4.0.1",
     "@material-ui/pickers": "^3.0.0",
@@ -79,7 +80,9 @@
     "debounce": "^1.2.0",
     "filefy": "0.1.9",
     "prop-types": "^15.6.2",
+    "react": "^16.8.5",
     "react-beautiful-dnd": "11.0.3",
+    "react-dom": "^16.8.4",
     "react-double-scrollbar": "0.0.15"
   }
 }
