--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@eataly/material-table",
-  "version": "1.36.6-footer",
+  "name": "@json2d/material-table",
+  "version": "1.36.6-footer.1",
   "description": "Datatable for React based on https://material-ui.com/api/table/ with additional features",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
