--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@json2d/material-table",
-  "version": "1.36.6-footer.2",
+  "version": "1.36.6-footer.3",
   "description": "Datatable for React based on https://material-ui.com/api/table/ with additional features",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -17,7 +17,8 @@
     "lint": "npm run eslint && npm run tsc",
     "eslint": "eslint src/** -c ./configs/.eslintrc",
     "tsc": "tsc --noEmit --lib es6,dom --skipLibCheck types/index.d.ts",
-    "lint:fix": "eslint src/** --fix"
+    "lint:fix": "eslint src/** --fix",
+    "prepublish": "npm run build"
   },
   "husky": {
     "hooks": {
