--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "material-table",
-  "version": "1.57.2",
-  "description": "Datatable for React based on https://material-ui.com/api/table/ with additional features",
+  "name": "one-datatable",
+  "version": "1.0.0",
+  "description": "Datatable for React based on https://material-table.com with additional features",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
   "files": [
@@ -26,30 +26,33 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mbrn/material-table.git"
+    "url": "git+https://github.com/sbbarragan/material-table.git"
   },
   "keywords": [
     "react",
     "material-ui",
     "material",
     "datatable",
-    "table"
+    "table",
+    "one"
   ],
-  "author": "Mehmet Baran",
+  "author": "Sergio Betanzos",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mbrn/material-table/issues"
+    "url": "https://github.com/sbbarragan/material-table/issues"
   },
-  "homepage": "https://github.com/mbrn/material-table#readme",
+  "homepage": "https://github.com/sbbarragan/material-table#readme",
   "devDependencies": {
     "@babel/cli": "7.1.2",
     "@babel/core": "7.4.4",
     "@babel/plugin-proposal-class-properties": "7.1.0",
     "@babel/plugin-proposal-object-rest-spread": "7.0.0",
     "@babel/plugin-transform-runtime": "7.1.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "7.0.0",
     "@material-ui/core": "^4.0.1",
+    "@material-ui/icons": "^4.0.1",
     "babel-eslint": "10.0.1",
     "babel-loader": "^8.0.4",
     "babel-polyfill": "^6.26.0",
