--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "@babel/plugin-transform-runtime": "7.1.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "7.0.0",
-    "@material-ui/core": "^4.0.1",
+    "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
     "babel-eslint": "10.0.1",
     "babel-loader": "^8.0.4",
     "babel-polyfill": "^6.26.0",
@@ -74,6 +75,7 @@
   "dependencies": {
     "@date-io/date-fns": "^1.1.0",
     "@material-ui/pickers": "^3.2.2",
+    "@material-ui/icons": "^4.9.1",
     "classnames": "^2.2.6",
     "date-fns": "^2.0.0-alpha.27",
     "debounce": "^1.2.0",
