--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "@babel/plugin-transform-runtime": "7.1.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "7.0.0",
-    "@material-ui/core": "^4.0.1",
+    "@material-ui/core": "^5.0.0-alpha.12",
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
     "babel-eslint": "10.0.1",
     "babel-loader": "^8.0.4",
     "babel-polyfill": "^6.26.0",
@@ -90,7 +92,9 @@
   },
   "peerDependencies": {
     "@date-io/core": "^1.3.6",
-    "@material-ui/core": "^4.0.1",
+    "@material-ui/core": "^5.0.0-alpha.12",
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   }
