--- a/package.json
+++ b/package.json
@@ -77,10 +77,10 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "@date-io/date-fns": "^1.1.0",
-    "@material-ui/pickers": "^3.2.2",
+    "@date-io/date-fns": "^2.8.0",
+    "@material-ui/pickers": "^4.0.0-alpha.12",
     "classnames": "^2.2.6",
-    "date-fns": "^2.0.0-alpha.27",
+    "date-fns": "^2.0.0",
     "debounce": "^1.2.0",
     "fast-deep-equal": "2.0.1",
     "filefy": "0.1.10",
@@ -91,7 +91,7 @@
     "react-double-scrollbar": "0.0.15"
   },
   "peerDependencies": {
-    "@date-io/core": "^1.3.6",
+    "@date-io/core": "^2.0.0",
     "@material-ui/core": "^5.0.0-alpha.14",
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
