chore: replace classnames by clsx

--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
   "dependencies": {
     "@date-io/date-fns": "1.1.0",
     "@material-ui/pickers": "3.2.2",
-    "classnames": "2.2.6",
+    "clsx": "1.1.1",
     "date-fns": "2.0.0-alpha.27",
     "debounce": "1.2.0",
     "fast-deep-equal": "2.0.1",
