--- a/package.json
+++ b/package.json
@@ -80,13 +80,13 @@
     "classnames": "2.2.6",
     "date-fns": "2.0.0-alpha.27",
     "debounce": "1.2.0",
-    "fast-deep-equal": "2.0.1",
     "filefy": "0.1.10",
     "jspdf": "2.1.0",
     "jspdf-autotable": "3.5.9",
     "prop-types": "15.6.2",
     "react-beautiful-dnd": "13.0.0",
-    "react-double-scrollbar": "0.0.15"
+    "react-double-scrollbar": "0.0.15",
+    "react-fast-compare": "^3.2.0"
   },
   "peerDependencies": {
     "@date-io/core": "1.3.6",
