--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "webpack-dev-server --config ./demo/webpack.config.js --mode development",
     "build": "babel src --out-dir dist",
     "lint": "npm run eslint && npm run tsc",
-    "eslint": "eslint src/** -c ./configs/.eslintrc",
+    "eslint": "eslint src/** -c ./configs/.eslintrc --ignore-path ./configs/.eslintignore",
     "tsc": "tsc --noEmit --lib es6,dom --skipLibCheck types/index.d.ts",
     "lint:fix": "eslint src/** --fix",
     "prettify": "prettier --write **/*.js"
