--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ script:
 deploy:
   edge: true
   provider: npm
-  email: "mehmetbaran@mehmetbaran.net"
-  api_key: "$NPM_TOKEN"
+  email: "--"
+  api_key: "--"
   skip_cleanup: true
   on:
     branch: master
