--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -28,7 +28,7 @@ jobs:
           commit_pattern: "^Release (\\S+)" # pattern that the commit message needs to follow
           # workspace: "." # custom workspace directory that contains the package.json file
           publish_command: "npm install && npm run lint && npm run build" # custom publish command (defaults to yarn)
-          # publish_args: "--non-interactive" # publish command arguments (for example --prod --verbose, defaults to empty)
+          publish_args: "--non-interactive" # publish command arguments (for example --prod --verbose, defaults to empty)
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
