resolve issues with npm/modify gh action
- Upgraded packages in `package.json`
- Allow for better version control via ^ in dependencies
- Removed `package-lock.json` from `.gitignore`
- Since running `npm install` calls `npm publish` I have to figure out a different way to run our github action
- Testing github action

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -5,14 +5,12 @@
 
 name: publish
 
-on: [push]
+on: []
 
 jobs:
-  publish-npm:
-    name: publish-npm
-
+  npm-publish:
+    name: npm-publish
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
