--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -33,8 +33,7 @@ jobs:
           node-version: 14
       - name: Publish
         run: |
-          npm config set @material-table:registry https://registry.npmjs.org
-          npm config set //registry.npmjs.org/:_authToken ${NPM_AUTH_TOKEN}
+          npm config set //registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}
           npm publish --ignore-scripts
         env:
           NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
