--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -37,6 +37,8 @@ jobs:
           node-version: 14
       - name: Publish
         run: |
+          npm install
+          npm run build
           npm config set @material-table:registry https://registry.npmjs.org/
           npm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_AUTH_TOKEN }}
           npm publish --ignore-scripts
