--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 # Should run on each push, this should include pull requests
 name: Build
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
