--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@material-ui/core": "^4.11.2",
+    "@webpack-cli/serve": "^1.2.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-polyfill": "^6.26.0",
@@ -75,7 +76,7 @@
     "react-hot-loader": "^4.13.0",
     "typescript": "^4.1.3",
     "webpack": "^5.11.0",
-    "webpack-cli": "^4.2.0",
+    "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
