--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "eslint": "./node_modules/.bin/eslint src/** -c ./configs/.eslintrc --ignore-path ./configs/.eslintignore",
     "tsc": "./node_modules/.bin/tsc --noEmit --lib es6,dom --skipLibCheck types/index.d.ts",
     "lint:fix": "./node_modules/.bin/eslint src/** -c ./configs/.eslintrc --ignore-path ./configs/.eslintignore --fix",
-    "prettify": "./node_modules/.bin/prettier -c ./.prettierrc --write **/*.js"
+    "prettify": "./node_modules/.bin/prettier -c ./.prettierrc --write **/*.js",
+    "cypress:start:helloworld": "./node_modules/.bin/cypress run --spec 'cypress/integration/helloworld.spec.js'",
+    "cypress:helloworld": "./node_modules/.bin/start-server-and-test start http://localhost:8080 cypress:start:helloworld"
   },
   "husky": {
     "hooks": {
@@ -59,6 +61,7 @@
     "babel-loader": "^8.2.2",
     "babel-polyfill": "^6.26.0",
     "buble": "^0.20.0",
+    "cypress": "^6.2.1",
     "eslint": "^7.16.0",
     "eslint-config-defaults": "^9.0.0",
     "eslint-config-standard": "^16.0.2",
@@ -74,6 +77,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.13.0",
+    "start-server-and-test": "^1.11.7",
     "typescript": "^4.1.3",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.3.1",
