--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   },
   "version": "2.2.4",
   "description": "Datatable for React based on https://material-ui.com/api/table/ with additional features",
-  "main": "dist/index.js",
+  "main": "dist/material-table.js",
+  "module": "dist/material-table.js",
   "types": "types/index.d.ts",
   "files": [
     "dist",
@@ -16,7 +17,8 @@
   },
   "scripts": {
     "start": "./node_modules/.bin/webpack serve --config ./demo/webpack.config.js --mode development --progress",
-    "build": "./node_modules/.bin/babel src --out-dir dist",
+    "build:babel": "./node_modules/.bin/babel src --out-dir dist",
+    "build": "./node_modules/.bin/rollup -c",
     "lint": "npm run eslint && npm run tsc",
     "eslint": "./node_modules/.bin/eslint src/** -c ./configs/.eslintrc --ignore-path ./configs/.eslintignore",
     "tsc": "./node_modules/.bin/tsc --noEmit --lib es6,dom --skipLibCheck types/index.d.ts",
@@ -56,6 +58,10 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@material-ui/core": "^4.11.2",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
+    "@rollup/plugin-strip": "^2.0.0",
     "@webpack-cli/serve": "^1.2.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -77,6 +83,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.13.0",
+    "rollup": "^2.36.1",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
     "start-server-and-test": "^1.11.7",
     "typescript": "^4.1.3",
     "webpack": "^5.11.0",
@@ -84,6 +95,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.12.5",
     "@date-io/date-fns": "^2.10.6",
     "@material-ui/pickers": "^3.2.10",
     "classnames": "^2.2.6",
