--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "scripts": {
     "start": "./node_modules/.bin/webpack serve --config ./demo/webpack.config.js --mode development --progress",
-    "build": "./node_modules/.bin/babel src --out-dir dist",
+    "build": "node esbuild.config.js",
+    "build:babel": "./node_modules/.bin/babel src --out-dir dist",
     "lint": "npm run eslint && npm run tsc",
     "eslint": "./node_modules/.bin/eslint src/** -c ./configs/.eslintrc --ignore-path ./configs/.eslintignore",
     "tsc": "./node_modules/.bin/tsc --noEmit --lib es6,dom --skipLibCheck types/index.d.ts",
@@ -63,6 +64,7 @@
     "babel-polyfill": "^6.26.0",
     "buble": "^0.20.0",
     "cypress": "^6.2.1",
+    "esbuild": "^0.8.31",
     "eslint": "^7.16.0",
     "eslint-config-defaults": "^9.0.0",
     "eslint-config-standard": "^16.0.2",
