--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
     "types"
   ],
   "babel": {
-    "extends": "./configs/.babelrc"
+    "extends": "./babel.config.js"
   },
   "scripts": {
-    "start": "./node_modules/.bin/webpack serve --config ./demo/webpack.config.js --mode development --progress",
+    "start": "./node_modules/.bin/webpack serve --config ./__tests__/demo/webpack.config.js --mode development --progress",
     "build": "node esbuild.config.js",
     "build:babel": "./node_modules/.bin/babel src --out-dir dist",
     "lint": "npm run eslint && npm run tsc",
-    "eslint": "./node_modules/.bin/eslint src/** -c ./configs/.eslintrc --ignore-path ./configs/.eslintignore",
+    "eslint": "./node_modules/.bin/eslint src/** -c ./.eslintrc --ignore-path ./.eslintignore",
     "tsc": "./node_modules/.bin/tsc --noEmit --lib es6,dom --skipLibCheck types/index.d.ts",
-    "lint:fix": "./node_modules/.bin/eslint src/** -c ./configs/.eslintrc --ignore-path ./configs/.eslintignore --fix",
+    "lint:fix": "./node_modules/.bin/eslint src/** -c ./.eslintrc --ignore-path ./.eslintignore --fix",
     "prettify": "./node_modules/.bin/prettier -c ./.prettierrc --write **/*.js",
     "cypress:start:helloworld": "./node_modules/.bin/cypress run --spec 'cypress/integration/helloworld.spec.js'",
-    "cypress:helloworld": "./node_modules/.bin/start-server-and-test start http://localhost:8080 cypress:start:helloworld"
+    "cypress:helloworld": "./node_modules/.bin/start-server-and-test start http://localhost:8080 cypress:start:helloworld",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -58,12 +59,17 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@material-ui/core": "^4.11.2",
+    "@types/jest": "^26.0.20",
     "@webpack-cli/serve": "^1.2.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-polyfill": "^6.26.0",
     "buble": "^0.20.0",
+    "chalk": "^4.1.0",
     "cypress": "^6.2.1",
+    "enzyme": "^3.11.0",
     "esbuild": "^0.8.31",
     "eslint": "^7.16.0",
     "eslint-config-defaults": "^9.0.0",
@@ -75,11 +81,14 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-standard": "^5.0.0",
     "husky": "1.2.0",
+    "jest": "^26.6.3",
+    "jest-canvas-mock": "^2.3.0",
     "prettier": "^2.2.1",
     "pretty-quick": "2.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.13.0",
+    "react-test-renderer": "^17.0.1",
     "start-server-and-test": "^1.11.7",
     "typescript": "^4.1.3",
     "webpack": "^5.11.0",
