--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@material-ui/core": "^4.11.2",
+    "@testing-library/react-hooks": "^4.0.0",
     "@types/jest": "^26.0.20",
     "@webpack-cli/serve": "^1.2.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
