--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "2.2.7",
+  "version": "2.2.8",
   "description": "Datatable for React based on https://material-ui.com/api/table/ with additional features",
-  "main": "dist/material-table.js",
-  "module": "dist/material-table.js",
+  "main": "dist/index.js",
   "types": "types/index.d.ts",
   "files": [
     "dist",
