--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "material-table",
   "version": "1.69.2",
   "description": "Datatable for React based on https://material-ui.com/api/table/ with additional features",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "types": "types/index.d.ts",
   "files": [
-    "src",
+    "dist",
     "types"
   ],
   "babel": {
