Add initial tests
Chooses @testing-library/react
Adds @testng-library/jest-dom custom matchers
Adds eslint-plugin-jest

Inherits tests from [existing test-setup branch](https://github.com/mbrn/material-table/tree/testing)

--- a/configs/.eslintrc
+++ b/configs/.eslintrc
@@ -1,5 +1,11 @@
 {
-  "extends": ["standard", "eslint:recommended", "plugin:react/recommended"],
+  "plugins": ["jest"],
+  "extends": [
+    "standard",
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:jest/recommended"
+  ],
   "rules": {
     "one-var": "off",
     "semi": ["error", "always", {
