--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "eslint": "eslint src/** -c ./configs/.eslintrc",
     "tsc": "tsc --noEmit --lib es6,dom --skipLibCheck types/index.d.ts",
     "lint:fix": "eslint src/** --fix",
-    "prettify": "prettier --write **/*.js"
+    "prettify": "prettier --write **/*.js",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -51,6 +52,8 @@
     "@babel/preset-env": "7.2.0",
     "@babel/preset-react": "7.0.0",
     "@material-ui/core": "4.0.1",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.4",
     "babel-polyfill": "6.26.0",
@@ -59,11 +62,14 @@
     "eslint-config-defaults": "9.0.0",
     "eslint-config-standard": "12.0.0",
     "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-node": "7.0.1",
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-react": "7.11.1",
     "eslint-plugin-standard": "4.0.0",
     "husky": "1.2.0",
+    "jest": "^26.6.3",
+    "jest-canvas-mock": "^2.3.1",
     "prettier": "2.0.5",
     "pretty-quick": "2.0.1",
     "react": "16.8.6",
