added the ability for the user to pass their own id in order for them to choose to have their panels closed if item with panel open is deleted

--- a/package.json
+++ b/package.json
@@ -51,9 +51,10 @@
     "@babel/preset-env": "7.2.0",
     "@babel/preset-react": "7.0.0",
     "@material-ui/core": "4.0.1",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.4",
-    "babel-polyfill": "6.26.0",
+    "babel-polyfill": "^6.26.0",
     "buble": "0.19.3",
     "eslint": "5.7.0",
     "eslint-config-defaults": "9.0.0",
