--- a/package.json
+++ b/package.json
@@ -50,8 +50,9 @@
     "@babel/plugin-transform-runtime": "7.1.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "7.0.0",
-    "@material-ui/core": "^5.0.0-alpha.34",
-    "@material-ui/lab": "^5.0.0-alpha.34",
+    "@material-ui/core": "^5.0.0-alpha.35",
+    "@material-ui/styles": "^5.0.0-alpha.35",
+    "@material-ui/lab": "^5.0.0-alpha.35",
     "@emotion/core": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@emotion/react": "^11.0.0",
@@ -93,8 +94,9 @@
   },
   "peerDependencies": {
     "@date-io/core": "^2.0.0",
-    "@material-ui/core": "^5.0.0-alpha.34",
-    "@material-ui/lab": "^5.0.0-alpha.34",
+    "@material-ui/core": "^5.0.0-alpha.35",
+    "@material-ui/styles": "^5.0.0-alpha.35",
+    "@material-ui/lab": "^5.0.0-alpha.35",
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
