show column when GroupBy , add onColumnResized

--- a/configs/.eslintrc
+++ b/configs/.eslintrc
@@ -2,9 +2,16 @@
   "extends": ["standard", "eslint:recommended", "plugin:react/recommended"],
   "rules": {
     "one-var": "off",
-    "semi": ["error", "always", {
-      "omitLastInOneLineBlock": true
-    }]
+    "indent": "off",
+    "react/jsx-indent": "off",
+    "react/jsx-indent-props": "off",
+    "semi": [
+      "error",
+      "always",
+      {
+        "omitLastInOneLineBlock": true
+      }
+    ]
   },
   "parser": "babel-eslint"
 }
