--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "@babel/plugin-transform-runtime": "7.1.0",
     "@babel/preset-env": "7.2.0",
     "@babel/preset-react": "7.0.0",
-    "@material-ui/core": "4.0.1",
+    "@material-ui/core": "4.9.10",
+    "@material-ui/icons": "^4.11.2",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.4",
     "babel-polyfill": "6.26.0",
