--- a/package.json
+++ b/package.json
@@ -66,17 +66,23 @@
     "husky": "1.2.0",
     "prettier": "2.0.5",
     "pretty-quick": "2.0.1",
-    "react": "16.8.6",
+    "react": "^17.0.2",
     "react-dom": "16.8.6",
     "react-hot-loader": "4.3.12",
-    "typescript": "3.2.2",
+    "typescript": "^4.5.4",
     "webpack": "4.27.1",
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.10"
   },
   "dependencies": {
     "@date-io/date-fns": "1.1.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/pickers": "3.2.2",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.63",
+    "@mui/material": "^5.2.7",
+    "@mui/styles": "^5.2.3",
     "classnames": "2.2.6",
     "date-fns": "2.0.0-alpha.27",
     "debounce": "1.2.0",
