Update package.json to allow publishing

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "material-table",
+  "name": "material-table-mui5",
   "version": "2.0.0",
   "description": "Datatable for React based on https://material-ui.com/api/table/ with additional features",
   "main": "dist/index.js",
@@ -27,7 +27,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mbrn/material-table.git"
+    "url": "git+https://github.com/cmelion/material-table.git"
   },
   "keywords": [
     "react",
@@ -36,12 +36,12 @@
     "datatable",
     "table"
   ],
-  "author": "Mehmet Baran",
+  "author": "Mehmet Baran, Charles Fulnecky",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mbrn/material-table/issues"
+    "url": "https://github.com/cmelion/material-table/issues"
   },
-  "homepage": "https://github.com/mbrn/material-table#readme",
+  "homepage": "https://github.com/cmelion/material-table#readme",
   "devDependencies": {
     "@babel/cli": "7.1.2",
     "@babel/core": "7.4.4",
