--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@mui/material": "^5.5.0",
     "@mui/lab": "^5.0.0-alpha.72",
     "@mui/styles": "5.5.0",
+    "@mui/x-date-pickers": "^5.0.0-beta.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
