--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "@babel/plugin-transform-runtime": "7.1.0",
     "@babel/preset-env": "7.2.0",
     "@babel/preset-react": "7.0.0",
-    "@mui/material": "^5.5.0",
     "@mui/lab": "^5.0.0-alpha.72",
+    "@mui/material": "^5.5.0",
     "@mui/styles": "5.5.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.4",
@@ -78,6 +78,7 @@
   },
   "dependencies": {
     "@date-io/date-fns": "2.13.1",
+    "@emotion/react": "^11.10.5",
     "@emotion/styled": "11.8.1",
     "classnames": "2.2.6",
     "date-fns": "2.28.0",
@@ -92,8 +93,8 @@
   },
   "peerDependencies": {
     "@date-io/core": "^2.13.1",
-    "@mui/material": "^5.5.0",
     "@mui/lab": "^5.0.0-alpha.72",
+    "@mui/material": "^5.5.0",
     "@mui/styles": "5.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
